--- a/src/main/resources/download_listview_cell.fxml
+++ b/src/main/resources/download_listview_cell.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane fx:id="root" prefHeight="72.0" style="-fx-background-color: null;" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.software.gui.controllers.DownloadCellController">
+<AnchorPane fx:id="root" prefHeight="72.0" style="-fx-background-color: null;" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.software.gui.controllers.cells.DownloadCellController">
    <children>
       <JFXProgressBar fx:id="progress_bar" layoutX="25.0" layoutY="37.0" mouseTransparent="true" prefHeight="6.0" prefWidth="303.0" progress="0.0" stylesheets="@css/progress_bar.css" AnchorPane.bottomAnchor="31.0" AnchorPane.leftAnchor="8.0" AnchorPane.rightAnchor="8.0" />
       <Text fx:id="speed_text" fill="#757373" layoutX="254.62158203125" layoutY="60.01220703125" mouseTransparent="true" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" AnchorPane.bottomAnchor="12.0" AnchorPane.rightAnchor="10.0">
