--- a/src/main/resources/listview_cell.fxml
+++ b/src/main/resources/listview_cell.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane fx:id="root" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.software.gui.controllers.ListViewCellController">
+<AnchorPane fx:id="root" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.software.gui.controllers.cells.ListViewCellController">
    <children>
       <Text fx:id="sub_text" fill="#6f6d6d" layoutX="73.0" layoutY="50.8603515625" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="63.0">
          <font>
