--- a/src/main/resources/server_listview_cell.fxml
+++ b/src/main/resources/server_listview_cell.fxml
@@ -3,10 +3,14 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
 <AnchorPane fx:id="root" prefWidth="200.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.software.gui.controllers.cells.ServerCellController">
    <children>
       <ImageView fx:id="server_icon" fitHeight="48.0" fitWidth="48.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0" />
-      <Label fx:id="server_name" layoutX="61.0" prefHeight="48.0" prefWidth="139.0" text="ServerName" AnchorPane.leftAnchor="61.0" AnchorPane.rightAnchor="0.0" />
+      <Label fx:id="server_name" layoutX="61.0" prefHeight="48.0" prefWidth="139.0" text="ServerName" AnchorPane.leftAnchor="61.0" AnchorPane.rightAnchor="0.0">
+         <font>
+            <Font name="Microsoft YaHei UI" size="14.0" />
+         </font></Label>
    </children>
 </AnchorPane>
