--- a/src/main/resources/about_dialog.fxml
+++ b/src/main/resources/about_dialog.fxml
@@ -10,9 +10,9 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="root" prefHeight="365.0" prefWidth="323.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.software.gui.controllers.AboutDialogController">
+<AnchorPane fx:id="root" prefHeight="365.0" prefWidth="476.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.software.gui.controllers.AboutDialogController">
    <children>
-      <GridPane hgap="2.0" layoutX="10.0" prefHeight="394.0" prefWidth="390.0" vgap="16.0">
+      <GridPane alignment="TOP_CENTER" centerShape="false" hgap="2.0" prefHeight="365.0" prefWidth="476.0" vgap="16.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
             <Label layoutX="40.0" layoutY="125.0" text="作者 : " textFill="#434343" wrapText="true" GridPane.rowIndex="2">
                <font>
@@ -26,7 +26,7 @@
                   <Font name="Microsoft YaHei" size="12.0" />
                </font>
             </Label>
-            <JFXButton fx:id="check_update_btn" buttonType="RAISED" layoutX="214.0" layoutY="47.0" mnemonicParsing="false" text="检查更新" GridPane.columnIndex="2" />
+            <JFXButton fx:id="check_update_btn" buttonType="RAISED" layoutX="214.0" layoutY="47.0" mnemonicParsing="false" prefHeight="23.0" prefWidth="85.0" text="检查更新" textAlignment="CENTER" wrapText="true" GridPane.columnIndex="2" />
             <Label layoutX="62.0" layoutY="51.0" text="当前版本：" />
             <VBox layoutX="139.0" layoutY="324.0" prefHeight="96.0" prefWidth="220.0" GridPane.columnIndex="1" GridPane.rowIndex="4">
                <children>
@@ -79,8 +79,8 @@
          </children>
          <columnConstraints>
             <ColumnConstraints />
-            <ColumnConstraints maxWidth="231.0" minWidth="183.0" prefWidth="220.0" />
-            <ColumnConstraints maxWidth="103.0" minWidth="10.0" prefWidth="66.0" />
+            <ColumnConstraints maxWidth="286.0" minWidth="183.0" />
+            <ColumnConstraints fillWidth="false" maxWidth="-Infinity" minWidth="0.0" />
          </columnConstraints>
          <opaqueInsets>
             <Insets />
